Fix the fields in the x_n union inside the the x_file structure so that pointers can be stored.

PR 28630
	* coff/internal.h (x_n): Use bfd_hostptr_t for the fields in this
	structure.